Fixed the stop button, added the next steps: opening the item page if it fits simple criteria and clicking on the order button

--- a/popup.html
+++ b/popup.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+<link rel="stylesheet" href="popup.css">
 <body>
     <input type="text" id="searchInput" placeholder="Enter search term">
     <button id="searchBtn">Search</button>
